# image-flatten

./: README.md  image-flatten.cabal
app/: Main.hs
src/: ImageFlatten.hs
