name:                image-flatten
version:             0.1.0.0
synopsis:            Flatten multiple images into a single image, combining or hiding differences
description:         Please see README.md
homepage:            https://github.com/githubuser/image-flatten#readme
license:             BSD3
license-file:        LICENSE
author:              Ian Sullivan
maintainer:          iansullivan88@gmail.com
copyright:           2017 Ian Sullivan
category:            Tool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ImageFlatten
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels
                     , bytestring
                     , io-streams
                     , either
                     , transformers
                     , directory
                     , vector
                     , filepath
  default-language:    Haskell2010

executable image-flatten
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , image-flatten
                     , optparse-applicative
                     , either
                     , filepath
                     , transformers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/image-flatten
